# filen-rs

./: .editorconfig  Cargo.toml
filen-sdk/: Cargo.toml
filen-sdk/src/: credentials.rs  crypto.rs  fs.rs  lib.rs
filen-sdk/src/api/: mod.rs  types.rs
filen-sdk/tests/: integration_test.rs
