[package]
name = "filen-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.95"
base64 = "0.22.1"
generic-array = "1.2.0"
getrandom = "0.3.1"
hex = "0.4.3"
keyring = {version = "3.6.1", features = ["windows-native"]}
pbkdf2 = "0.12.2"
reqwest = {version = "0.12.12", features = ["blocking", "json"]}
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15.7"
